--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -41,6 +41,7 @@ library(lmtest)
 library(tseries)
 library(sandwich)
 library(car)
+library(stargazer)
 ```
 
 # A presentation of the project
@@ -1050,17 +1051,21 @@ ggplot(merged_data, aes(fill = per_seats_dep_change)) +
 
 ## Explaining the diversity in the temporal evolution of attendance by department : an econometric analysis
 
-In the preceding section, we explored the narrative shaped by the history of movie theaters. A pivotal aspect of this tale was the presence of heterogeneity in the trajectory that each departmental attendance followed. This final section aims is to study whether we can link this heterogeneity with the demographic features of the department and its evolution. Specifically, we will attempt to understand which sociodemographic characteristics had a positive or negative influence on the evolution of attendance over time. <br> Studying this interaction can be challenging through the sole use of graphics. The dataset's variables can be affected by complex interactions, and relying solely on plots can lead to spurious conclusions. Moreover, graphical method encounters limitations as the number of variables of interest increases. That’s why the utilization of econometric models can be valuable to perform a more thorough analysis. This section is dedicated to employing econometric methodologies to find answers that address our research question. To achieve this, we will use a panel data econometric model that incorporates both cross-sectional and time series characteristics of our dataset.
+In the preceding section, we explored the narrative shaped by the history of movie theaters. A pivotal aspect of this tale was the presence of heterogeneity in the trajectory that each departmental attendance followed. This final section aims is to study whether we can link this heterogeneity with the demographic features of the department and its evolution. Specifically, we will attempt to understand which sociodemographic characteristics had a positive or negative influence on the evolution of attendance over time.
 
-\<br\>
+<br>
+
+Studying this interaction can be challenging through the sole use of graphics. The dataset's variables can be affected by complex interactions, and relying solely on plots can lead to spurious conclusions. Moreover, graphical method encounters limitations as the number of variables of interest increases. That’s why the utilization of econometric models can be valuable to perform a more thorough analysis. This section is dedicated to employing econometric methodologies to find answers that address our research question. To achieve this, we will use a panel data econometric model that incorporates both cross-sectional and time series characteristics of our dataset.
+
+<br>
 
 However, we quickly realized that this project was ambitious. At this stage of our academic journey, our technical understanding of econometrics is not sufficient to execute a solid panel regression that would address all the requirements of our dataset. Mastery of panel data is yet beyond our current training and knowledge. Nevertheless, we approached this assignment as a training ground to familiarize ourselves with the procedures for conducting an econometrics analysis on panel data. Therefore, we do not have the pretention to say that our work provided the correct correlation between our explained variable and the sociodemographic features of the department. However, it demonstrates what a procedure for testing and interpreting a longitudinal econometrics model.
 
-\<br\>
+<br>
 
 After consulting various sources, our final procedure drew mainly inspiration from Altaf (2017) and a document by Torres-Reyna (2010) for Princeton University. The codes and the process were also influenced by Schmidheiny (2023) and Wagle (2021) papers. Bourbonnais (2020) also contributed significantly to our understanding of part of the theory behind the use of panel data.
 
-\<br\>
+<br>
 
 This section is divided into two parts:
 
@@ -1131,8 +1136,11 @@ $$ Where :
 
 -   $u$ : the residuals
 
-This Panel Data is such that N = 96 and T = 8 (the 8 years of the french census that are present in the Insee's dataset). <br> Various models were tested during the draft of our work, considering factors such as age range, type of activity and combinations of the aforementioned data with CSP. However, we opted for this final model for two reasons. Firstly, it had a good Bayesian information criterion (BIC) score relatively to its counterpart (see Annex 2 for the method used to compute the BIC score). Secondly, it was the model were the colinearity among explanotary variables was the least strong. The main part of our econometrics treatment were performed with the **plm** package. By prudence, we selected to apply only basic techniques for the econometric analysis of panel data.
+This Panel Data is such that N = 96 and T = 8 (the 8 years of the french census that are present in the Insee's dataset).
+
 <br>
+
+Various models were tested during the draft of our work, considering factors such as age range, type of activity and combinations of the aforementioned data with CSP. However, we opted for this final model for two reasons. Firstly, it had a good Bayesian information criterion (BIC) score relatively to its counterpart (see Annex 2 for the method used to compute the BIC score). Secondly, it was the model were the colinearity among explanotary variables was the least strong. The main part of our econometrics treatment were performed with the **plm** package. By prudence, we selected to apply only basic techniques for the econometric analysis of panel data. <br>
 
 #### Choice of the type of model
 
@@ -1186,8 +1194,7 @@ plmtest(f_eff_time, effect="time", type="bp")
 plmtest(f_eff_time, effect="time", type="honda")
 ```
 
-We then used a two ways model combining time-fixed and individual effects. Our model became : 
-<br> 
+We then used a two ways model combining time-fixed and individual effects. Our model became : <br>
 
 $$
 Attendance = \beta_0 + \beta_1 Farm_{it} + \beta_2 Craf\_sh\_head_{it} + \beta_3 Ex\_intel_{it} + \beta_4 Int\_prof_{it} + \beta_5 Employees_{it} + \beta_6 Workers_{it} + \beta_7 Retirees_{it} + \beta_8 Ina_{it} + \alpha_{it} + \gamma_{it} + u_{it}
@@ -1245,10 +1252,11 @@ pcdtest(f_eff_2ways, test = c("lm"))
 pcdtest(f_eff_2ways, test = c("cd"))
 ```
 
-Altaf proposes the utilization of the Beck and Katz method as a solution to tackle this issue. To implement this method, we will forgo the utilization of the **vcovHC** argument and instead use the **vcovSC** one, which performs the same correction and also enables the correction of cross-sectional dependence. 
-<br> 
+Altaf proposes the utilization of the Beck and Katz method as a solution to tackle this issue. To implement this method, we will forgo the utilization of the **vcovHC** argument and instead use the **vcovSC** one, which performs the same correction and also enables the correction of cross-sectional dependence.
 
-#### Temporal section 
+<br>
+
+#### Temporal division
 
 One of our concerns was how the model would react to the shift in attendance trend. As we saw, the decades preceding 1993 are a period of sharp decline, but the opposite is true after this threshold. Unfortunately, we currently lack the techniques to resolve this issue. However, we tried to have an alternative solution to take into account this issue. Our approach was to add in our analysis two models similar to the main one : - One specifically dedicated to the year before 1990 (included), corresponding to the year of the census closest to 1993, - one for the period strictly after.
 
@@ -1261,72 +1269,19 @@ f_eff_2ways_b90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Emp
 #After 1990 (not included)
 Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
 
-f_eff_2ways_a90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
-
-```
-
-<br> 
-### Part 2 - Discussion
-
-```{r Outcome_before_correction}
-summary(f_eff_2ways)
-```
-
-```{r Coefficient_with_correction_of_the_different_issues}
-coeftest(f_eff_2ways, vcov = vcovSCC(f_eff_2ways_2, method = "arellano"))
-```
-
-<br>
-
-#### Multicolinearity analysis
-
-```{r VIF_test}
-# Modèle économétrique avec juste les tranches d'âge
-mvif_1 <-plm(entrées ~ a_less_than_6 + a_6_to_24 + a_25_to_42 + a_43_to_59 + a_60_and_more, data=Econ_data_v2, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_1)
-
-# Modèle économétrique avec uniquement CSP
-mvif_2 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_2)
-
-# Modèle Econométrique avec Groupe d'Age et CSP mais sans retraité et en remplaçant la CSP sur les inactifs par Unemployed
-mvif_3 <-plm(entrées ~ a_less_than_6 + a_6_to_24 + a_25_to_42 + a_43_to_59 + a_60_and_more + Farm_wu + Craf_sh_head_wu + Ex_intel_wu + Int_prof_wu + Employees_wu + Workers_wu +  Unemployed, data=Econ_data_v3, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_3)
-
-# Modèle Econométrique avec Groupe d'Age et CSP mais sans retraité, sans enfant de moins de 6 ans et en remplaçant la CSP sur les inactifs par Unemployed
-mvif_4 <-plm(entrées ~ a_6_to_24 + a_25_to_42 + a_43_to_59 + a_60_and_more + Farm_wu + Craf_sh_head_wu + Ex_intel_wu + Int_prof_wu + Employees_wu + Workers_wu +  Unemployed, data=Econ_data_v3, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_4)
-
-# modele avec retraité, 60+ non retraité, etudiant/eleve, 6-24 non etudiant, chomeur et CSP 24-59 ans
-mvif_5 <-plm(X_Y, data=Econ_data_v4_1, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_5)
-
-# Age range and CSP
-
-model_for_AG_CSP_vif <- paste("entrées ~ ",X_for_AG_CSP)
-
-mvif_6 <- plm(model_for_AG_CSP_vif, data=Econ_data_AG_CSP, index=c("departement_code", "year"), model="pooling")
-
-vif(mvif_6)
+f_eff_2ways_a90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within",effect = "twoways")
 
 ```
 
 <br>
 
-### Bayesan Information Criterion
+#### Additional test : Bayesan Information Criterion
 
-The selection of the final were performed using the Bayesian Information Criterion. We used the formula used in Yum's paper (2021) on his analysis of is an AIC for model selection for panel data models with fixed effect :
+During our research phase, another test plays a crucial role: the Bayesian Information Criterion. It holds significant importance in the selection of the final model among the various draft models that were not retained in the analysis. We utilized the formula presented in Yum's paper (2021) on information criterion analysis for model selection in panel data models with fixed effects.
 
-<br> 
-$$
+<br> $$
 BIC = N \times T \times \log(\sigma^2) + K \times \log(N \times T) 
-$$ 
-<br>
+$$ <br>
 
 With : $\sigma = \frac{SSR}{N \times T}$
 
@@ -1356,11 +1311,57 @@ bic_value <- n_obs * log(sigma_squared) + k_model * log(n_obs)
 print(bic_value)
 ```
 
-### Limits
+<br>
 
-Variable de controle : télévision
+#### Multicolinearity analysis
 
-Non linéarité
+To conclude, VIF test show that our model is marked by multicolinearity. Among the model that we tested during our draft work (models with age range, models with various combination of age range, type of activity and CSP), the model using solely CSP seems to be the one where this problem were the least acute. Using instrumental variable
+
+```{r VIF_test}
+mvif <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="pooling")
+
+vif(mvif)
+```
+
+<br>
+
+### Part 2 - Discussion The initial regression, performed before implementing the Beck and Katz correction method, provided the results below.
+
+```{r Outcome_before_correction}
+summary(f_eff_2ways)
+```
+
+In the table, a comparison of coefficients before and after the application of **vcovSCC** with ' **method = "Arellano"** ' is provided. We can remark that the correction of serial correlation, cross-sectional dependence, and heteroscedasticity did not change the coefficients. However, it did impact the standard error and the t-value.
+
+```{r Comparaison_of_standard_model_and_model_with_SCC}
+
+SCC <- coeftest(f_eff_2ways, vcov = vcovSCC(f_eff_2ways_2, method = "arellano"))
+
+screenreg(list("Basic Model" = f_eff_2ways, "Corrected Model" = SCC))
+```
+
+Because of multicollinearity, we preferred to ignore the raw interpretation of the estimate. However, their significance and signs can still give us insights into the potential relationship between CSP and the evolution of attendance. Over the overall 1968-2019 period, the population of employees, artisans, shopkeepers, and business owners seems to have a positive impact on attendance. It is also true for the number of inactive individuals but with a lower significance level. On the other hand, the number of farmers and workers had a negative impact on the evolution of attendance. Some of these outcomes can be interpreted as echoing results observed in other papers. CNC's reports based on its "Médiamétrie" surveys since 1993 (CNC, 2008, 2013, 2016, 2020) found that workers tend to go less often to movie theaters than other CSP. Quoting Bonnel, Thiolliere, and Ralite (2003), they also explained that workers were the movie theater's most loyal audience before the 60s but also the one where its consumption plummeted between the 60s and the 90s.
+
+While being the positive variable with the least significant level, the impact of the number of inactive individuals can also be linked to former CNC surveys’ outcomes. Pupils and students who belong to this CSP are the audience with the highest movie theater consumption.
+
+<br>
+
+The analysis takes a different turn when the model is split into the two aforementioned models. Several variables become insignificant. Conversely, the impact of inactive individuals becomes more significant, which can be linked with the elements that we previously discussed. The manual worker variable, while still significant before 1990, loses its significance afterward. These outcomes can be potentially easily explained. As we discussed, the 60s-90s period is a period of historically lower movie theater attendance by this CSP. However, the introduction of multiplexes, notably because they tend to be in popular areas, may have put the brakes on this decline. Another potential explanation could be that the reduction in their consumption was not continuous but, after a period of decline, a plateau was reached. What is more surprising is that the number of artisans, shopkeepers, and business owners had a negative impact before 1990 and had no impact after in the split models, while its impact is strictly positive in the model of the overall period.
+
+```{r Coefficient_with_correction_of_the_different_issues}
+SCC_b90 <- coeftest(f_eff_2ways_b90, vcov = vcovSCC(f_eff_2ways_2, method = "arellano"))
+
+SCC_a90 <- coeftest(f_eff_2ways_a90, vcov = vcovSCC(f_eff_2ways_2, method = "arellano"))
+
+screenreg(list("<= 1990" = SCC_b90, "> 1990" = SCC_a90))
+
+```
+
+<br>
+
+These outcomes advocate for the realization of complementary studies. Some of the observed phenomena may also be explained, in part, by limitations inherent with our model. Multicollinearity, as we saw, is one of these issues. However, two other issues deserve attention. One of them is the absence of key control variables. We were particularly eager to incorporate a control variable for television consumption, often cited as a factor in the attendance decline during the 20th century. Unfortunately, we were unable to find data at the departmental level. Furthermore, it is intriguing to explore whether the recent proliferation of streaming services with giants like Netflix, Prime Video, or Disney+ had an impact on cinema attendance. Another limitation of our model arises from the use of linear estimators. Non-linear relationships between our variables could potentially result in spurious coefficients. <br> In conclusion, given the limitations of our models, it is not feasible to draw definitive conclusions. Nevertheless, some of the model results align with elements observed in previous surveys and senatorial reports, notably regarding the impact of workers but also pupils and students population on cinema attendance. The idea that the diversity observed in the evolution of attendance in French departments is linked to the dynamics of these populations emerges as a strong hypothesis. Moreover, this work highlights the potential of the cinema market as an intriguing subject of analysis for econometricians, offering opportunities for further explorations.
+
+<br>
 
 # Map for comparaison
 
@@ -1390,19 +1391,20 @@ chosen_breaks <- c(-Inf, -50, -25, 0, 25, 50, Inf)
   tmaptools::palette_explorer()
 ```
 
-# Annex 
+# Annex
 
 ## Annex 1 ...
 
 ## Anex 2 - Test on the CSP models for the year before 1990
 
-<center>**\1990 and before** </center>
+<center>**\\1990 and before**</center>
 
 ```{r Dataset_for_the_model_b90}
 Econ_data_v2_1<- Econ_data_v2 %>% filter(year <= 1990)
 ```
 
 ### Test between OLS and Fixed Effect model
+
 ```{r Test_between_fixed_effect_and_OLS_b90}
 
 #OLS Model
@@ -1416,6 +1418,7 @@ pFtest(f_eff_b90, ols_b90)
 ```
 
 ### Test between Fixed and Random Model
+
 ```{r Test_between_fixed_and_random_effect_b9}
 #Random effect model
 r_eff_b90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="random") 
@@ -1438,7 +1441,6 @@ plmtest(f_eff_time_b90, effect="time", type="bp")
 plmtest(f_eff_time_b90, effect="time", type="honda")
 ```
 
-
 ```{r}
 f_eff_2ways_b90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
 ```
@@ -1446,6 +1448,7 @@ f_eff_2ways_b90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Emp
 <br>
 
 ### Test for unit roots
+
 ```{r Test_for_unit_roots}
 Panel.set<- pdata.frame(Econ_data_v2_1, index = c("departement_code", "year")) 
 
@@ -1455,6 +1458,7 @@ adf.test(Econ_data_v2_1$entrées, k=2)adf.test(Econ_data_v2_1$entrées, k=2)
 <br>
 
 ### Test for serial correlation
+
 ```{r Test_for_serial_correlation}
 pbgtest(f_eff_2ways_b90)
 ```
@@ -1462,12 +1466,15 @@ pbgtest(f_eff_2ways_b90)
 <br>
 
 ### Test of Heterosedasticity
+
 ```{r #Test_for_heteroscedasticity}
 bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2, studentize=F)
 ```
+
 <br>
 
 ### Test for cross-sectional dependence
+
 ```{r Test_for_cross_sectional_dependence}
 #Breusch-Pagan LM test for cross-sectional dependence
 pcdtest(f_eff_b90, test = c("lm"))
@@ -1475,17 +1482,19 @@ pcdtest(f_eff_b90, test = c("lm"))
 #Pesaran test for cross-sectional dependence
 pcdtest(f_eff_b90, test = c("cd"))
 ```
-<br> 
-## Anex 3 - Test on the CSP models for the year after 1990
 
-<center>**\Striclty after (1990)** </center>
+<br>
+
+### Anex 3 - Test on the CSP models for the year after 1990
+
+<center> **Striclty after (1990)** </center>
 
 ```{r Dataset_for_the_model_a80}
 Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
 ```
 
-
 ### Test between OLS and Fixed Effect
+
 ```{r Test_between_fixed_effect_and_OLS_a90}
 
 # OLS Model
@@ -1497,8 +1506,11 @@ f_eff_a90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees
 # F Test for Individual and/or Time Effects test
 pFtest(f_eff_a90, ols_a90)
 ```
+
 <br>
-### Test betwen Fixed and Random effect model
+
+### Test between Fixed and Random effect model
+
 ```{r Test_between_fixed_and_random_effect_a90}
 #Random effect model
 r_eff_a90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="random") 
@@ -1511,6 +1523,7 @@ phtest(f_eff_a90, r_eff_a90)
 <br>
 
 ### Test for time-fixed effect and individual effect
+
 ```{r test_for_time_fixed_effect_a90}
 #Model with time-fixed effects.
 f_eff_time_a90 <-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within", effect = "time")
@@ -1520,12 +1533,14 @@ plmtest(f_eff_time_a90, effect="time", type="bp")
 plmtest(f_eff_time_a90, effect="time", type="honda")
 ```
 
-
 ```{r two_ways_model__specification_a90_annex}
 f_eff_2ways_a90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within",effect = "twoways")
 ```
+
 <br>
+
 ### Test for unit roots
+
 ```{r Test_for_unit_roots_a90}
 Panel.set<- pdata.frame(Econ_data_v2_2, index = c("departement_code", "year")) 
 
@@ -1535,16 +1550,23 @@ adf.test(Econ_data_v2_2$entrées, k=2)adf.test(Econ_data_v2_2$entrées, k=2)
 <br>
 
 ### Test for serial correlation
+
 ```{r Test_for_serial_correlation_a90}
 pbgtest(f_eff_2ways_a90)
 ```
+
 <br>
+
 ### Test of Heterosedasticity
-```{r #Test_for_heteroscedasticity_a90}
+
+```{r Test_for_heteroscedasticity_a90}
 bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2_2, studentize=F)
 ```
+
 <br>
+
 ### Test for cross-sectional dependence
+
 ```{r Test_for_cross_sectional_dependence_a90}
 #Breusch-Pagan LM test for cross-sectional dependence
 pcdtest(f_eff_a90, test = c("lm"))
@@ -1552,7 +1574,8 @@ pcdtest(f_eff_a90, test = c("lm"))
 #Pesaran test for cross-sectional dependence
 pcdtest(f_eff_a90, test = c("cd"))
 ```
-<br> 
+
+<br>
 
 # References
 
@@ -1626,7 +1649,7 @@ URL : <https://www.econometrics-with-r.org/index.html>
 
 **Insee, 2023.** *Consulter la PCS 2003 - Professions et catégories socioprofessionnelles - Catégorie socioprofessionnelle agrégée 4 : Professions Intermédiaires*
 
-\<br\>
+<br>
 
 **MUHLBERGER David 2013.** *Cinema attendance during crises is there a relationship between cinema attendance and the state of the economy in France in the period 1992-2012?*
 
